accessibility: fix "- Target has insufficient size (71.7px by 20px, should be at least 24px by 24px), Target has insufficient space to its closest neighbors. Safe clickable space has a diameter of 22px instead of at least 24px.:               div[data-id="183001"] > .mod-booking-view-card-image-and-body-area.mod-booking-row > .me-2.ms-2.p-2 > .teacher > .col-teacher-teachers-container.flex-wrap-container > .col-teacher-teacher.flex-wrap-element > a" (https://github.com/Wunderbyte-GmbH/Wunderbyte-GmbH/issues/1597)

--- a/styles.css
+++ b/styles.css
@@ -569,6 +569,12 @@ We need this for teachers for example. */
     white-space: nowrap;
 }
 
+.col-teacher-teacher a {
+    align-items: center;
+    display: inline-flex;
+    min-height: 24px;
+}
+
 /* Styles for new report.php */
 #accordion-usertables .columnclass.option {
     max-width: 100px;
